# genome_assembly_project

./: .gitignore  .toggletasks.json  CMakeLists.txt  Dockerfile  README.md  algChart.py  algChartRandom.py  algChartTest.py  algCharts.py  algChartsRandom.py  build.sh  docker-compose.yml  shell.nix
include/: AntColonyOptimization.h  Colony.h  Sequence.h  chaoticAnt.h  colony.h  edge.h  pickyAnt.h  vertice.h
sprawozdanie/: sprawko.md
sprawozdanie/.obsidian/: workspace.json
src/: AntColonyOptimization.cpp  Colony.cpp  Sequence.cpp  chaoticAnt.cpp  main  main.cpp  pickyAnt.cpp
